<?xml version="1.0"?>
<package>
  <name>raspigibbon_apps</name>
  <version>0.0.0</version>
  <description>The raspigibbon_apps package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/raspigibbon_apps</url> -->
  <url type="website">http://github.com/rt-net/RaspberryPiGibbon/wiki</url>
  <url type="repository">https://github.com/raspberrypigibbon/raspigibbon_apps</url>
  <url type="bugtracker">https://github.com/raspberrypigibbon/raspigibbon_apps/issues</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="brast351-github@yahoo.co.jp">Shota Hirama</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>raspigibbon_master_slave</run_depend>
  <run_depend>raspigibbon_ros</run_depend>
  <run_depend>raspigibbon_utils</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>

  </export>
</package>
